--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.86.0",
     "@types/sql.js": "^1.4.9",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
